output2.log
  File "/home/runner/work/Python-Actions.FindMind/Python-Actions.FindMind/FindMind-read_stock_data_by_date.py", line 138
    
    ^
SyntaxError: unexpected EOF while parsing
